--- a/index.html
+++ b/index.html
@@ -10,6 +10,71 @@
     <title>Главная</title>
 </head>
 <body>
-    
+    <header>
+        <div class="wrapper header__wrapper">
+            <div class="sitetoolbar">
+                <button class="sitetoolbar__button" type="button">
+                    <span class="sitetoolbar__button-line"></span>
+                </button>
+            </div>
+            <div class="header__logo-wrapper">
+                <img class="header__logo" src="img/logo-mospolytech.svg" alt="Московский политех" width="115" height="30" />
+            </div>
+        </div>
+    </header>
+
+    <main>
+        <div class="wrapper main__wrapper">
+            <h2 class="title main__title">Главная</h2>
+
+            <div class="main__content">
+                <div class="days-timer">
+                    <p class="days-timer__text">До защиты осталось</p>
+                    <div class="days-timer__counter-wrapper">
+                        <p class="days-timer__counter-text">
+                            <span>15</span> дней
+                        </p>
+                        <div class="days-timer__picture-wrapper">
+                            <img class="days-timer__picture" src="img/hourglass.svg" alt="!">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="menu main__menu">
+                    <button class="menu__section" type="button">
+                        <h3 class="menu__section-title">Поиск проектов</h3>
+                        <div class="menu__section-image-wrapper menu__section-image-projects-search">
+                            <img class="menu__section-image" src="img/projects-search.svg" alt="Раздел меню">
+                        </div>
+                    </button>
+
+                    <button class="menu__section" type="button">
+                        <h3 class="menu__section-title">Создать проект</h3>
+                        <div class="menu__section-image-wrapper menu__section-image-create-project">
+                            <img class="menu__section-image" src="img/create-project.svg" alt="Раздел меню">
+                        </div>
+                    </button>
+
+                    <button class="menu__section" type="button">
+                        <h3 class="menu__section-title">Хакатоны</h3>
+                        <div class="menu__section-image-wrapper menu__section-image-hackathons">
+                            <img class="menu__section-image" src="img/hackathons.svg" alt="Раздел меню">
+                        </div>
+                    </button>
+
+                    <button class="menu__section" type="button">
+                        <h3 class="menu__section-title">О проектной деятельности</h3>
+                        <div class="menu__section-image-wrapper menu__section-image-about-project-activities">
+                            <img class="menu__section-image" src="img/about-project-activities.svg" alt="Раздел меню">
+                        </div>
+                    </button>
+                </div>
+
+                <div class="main__bulletin-board">
+
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
