--- a/index.html
+++ b/index.html
@@ -25,11 +25,15 @@
 
     <main>
         <div class="wrapper main__wrapper">
-            <h2 class="title main__title">Главная</h2>
+            <h2 class="title main__title">
+                Главная
+            </h2>
 
             <div class="main__content">
                 <div class="days-timer">
-                    <p class="days-timer__text">До защиты осталось</p>
+                    <p class="days-timer__text">
+                        До защиты осталось
+                    </p>
                     <div class="days-timer__counter-wrapper">
                         <p class="days-timer__counter-text">
                             <span>15</span> дней
@@ -42,36 +46,83 @@
 
                 <div class="menu main__menu">
                     <button class="menu__section" type="button">
-                        <h3 class="menu__section-title">Поиск проектов</h3>
+                        <h3 class="menu__section-title">
+                            Поиск проектов
+                        </h3>
                         <div class="menu__section-image-wrapper menu__section-image-projects-search">
                             <img class="menu__section-image" src="img/projects-search.svg" alt="Раздел меню">
                         </div>
                     </button>
 
                     <button class="menu__section" type="button">
-                        <h3 class="menu__section-title">Создать проект</h3>
+                        <h3 class="menu__section-title">
+                            Создать проект
+                        </h3>
                         <div class="menu__section-image-wrapper menu__section-image-create-project">
                             <img class="menu__section-image" src="img/create-project.svg" alt="Раздел меню">
                         </div>
                     </button>
 
                     <button class="menu__section" type="button">
-                        <h3 class="menu__section-title">Хакатоны</h3>
+                        <h3 class="menu__section-title">
+                            Хакатоны
+                        </h3>
                         <div class="menu__section-image-wrapper menu__section-image-hackathons">
                             <img class="menu__section-image" src="img/hackathons.svg" alt="Раздел меню">
                         </div>
                     </button>
 
                     <button class="menu__section" type="button">
-                        <h3 class="menu__section-title">О проектной деятельности</h3>
+                        <h3 class="menu__section-title">
+                            О проектной деятельности
+                        </h3>
                         <div class="menu__section-image-wrapper menu__section-image-about-project-activities">
                             <img class="menu__section-image" src="img/about-project-activities.svg" alt="Раздел меню">
                         </div>
                     </button>
                 </div>
 
-                <div class="main__bulletin-board">
-                    
+                <div class="bulletin-board main__bulletin-board">
+                    <div class="bulletin-board__title-wrapper">
+                        <h3 class="bulletin-board__title">
+                            Доска объявлений
+                        </h3>
+                    </div>
+
+                    <div class="bulletin-board__announcements-wrapper">
+                        <ul class="bulletin-board__announcements">
+                            <li class="bulletin-board__announcement">
+                                <p class="bulletin-board__text">
+                                    Открыта регистрация на хакатон
+                                </p>
+                                <button class="bulletin-board__author">
+                                    Даньшина М.В.
+                                </button>
+                            </li>
+                            <li class="bulletin-board__announcement">
+                                <p class="bulletin-board__text">
+                                    Открыта регистрация на хакатон
+                                </p>
+                                <button class="bulletin-board__author">
+                                    Даньшина М.В.
+                                </button>
+                            </li>
+                            <li class="bulletin-board__announcement">
+                                <p class="bulletin-board__text">
+                                    Открыта регистрация на хакатон
+                                </p>
+                                <button class="bulletin-board__author">
+                                    Даньшина М.В.
+                                </button>
+                            </li>
+                        </ul>
+                        
+                        <div class="bulletin-board__button-wrapper">
+                            <button class="button bulletin-board__button" type="button">
+                                Добавить
+                            </button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
