--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <header>
+        <h1 class="visually-hidden">Подбор студенческих команд в Московском политехе</h1>
         <div class="wrapper header__wrapper">
             <div class="sitetoolbar">
                 <button class="sitetoolbar__button" type="button">
