--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
     </header>
 
-    <main>
+    <main role="main">
         <div class="wrapper main__wrapper">
             <h2 class="title main__title">
                 Главная
