--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             <div class="header__logo-wrapper">
                 <img class="header__logo" src="img/logo-mospolytech.svg" alt="Московский политех" width="115" height="30" />
             </div>
+            <button class="button header__button" type="button">
+                Войти
+            </button>
         </div>
     </header>
 
@@ -68,19 +71,19 @@
 
                     <button class="menu__section" type="button">
                         <h3 class="menu__section-title">
-                            Хакатоны
+                            О проектной деятельности
                         </h3>
-                        <div class="menu__section-image-wrapper menu__section-image-hackathons">
-                            <img class="menu__section-image" src="img/hackathons.svg" alt="Раздел меню">
+                        <div class="menu__section-image-wrapper menu__section-image-about-project-activities">
+                            <img class="menu__section-image" src="img/about-project-activities.svg" alt="Раздел меню">
                         </div>
                     </button>
 
                     <button class="menu__section" type="button">
                         <h3 class="menu__section-title">
-                            О проектной деятельности
+                            Хакатоны
                         </h3>
-                        <div class="menu__section-image-wrapper menu__section-image-about-project-activities">
-                            <img class="menu__section-image" src="img/about-project-activities.svg" alt="Раздел меню">
+                        <div class="menu__section-image-wrapper menu__section-image-hackathons">
+                            <img class="menu__section-image" src="img/hackathons.svg" alt="Раздел меню">
                         </div>
                     </button>
                 </div>
