--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         </ul>
                         
                         <div class="bulletin-board__button-wrapper">
-                            <button class="button bulletin-board__button" type="button">
+                            <button class="button bulletin-board__button" type="button" data-button-to-call-modal='modal-to-add-announcement'>
                                 Добавить
                             </button>
                         </div>
@@ -133,5 +133,29 @@
             </div>
         </div>
     </main>
+
+    <div class="modal-wrapper" data-modal-to-add-announcement>
+        <div class="modal">
+            <div class="modal__close-button-wrapper">
+                <button class="modal__close-button" type="button" data-button-to-close-modal>
+                    <img class="modal__close-button-image" src="img/cross.svg" alt="Закрыть">
+                </button>
+            </div>
+            <div class="modal__content">
+                <h3 class="modal__title">
+                    Добавление объявления
+                </h3>
+
+                <form class="modal__form">
+                    <input class="modal__input" type="text" placeholder="Заголовок объявления">
+                    <textarea class="modal__textarea modal__textarea--mb40" placeholder="Текст объявления"></textarea>
+                    <input class="button modal__button" type="submit" data-button-to-close-modal>
+                    <!-- data-button-to-close-modal временно -->
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <script src="app.js"></script>
 </body>
 </html>
