--- a/index.html
+++ b/index.html
@@ -88,43 +88,43 @@
                     </button>
                 </div>
 
-                <div class="bulletin-board main__bulletin-board">
-                    <div class="bulletin-board__title-wrapper">
-                        <h3 class="bulletin-board__title">
+                <div class="announcement-board main__announcement-board">
+                    <div class="announcement-board__title-wrapper">
+                        <h3 class="announcement-board__title">
                             Доска объявлений
                         </h3>
                     </div>
 
-                    <div class="bulletin-board__announcements-wrapper">
-                        <ul class="bulletin-board__announcements">
-                            <li class="bulletin-board__announcement">
-                                <p class="bulletin-board__text">
+                    <div class="announcement-board__announcements-wrapper">
+                        <ul class="announcement-board__announcements">
+                            <li class="announcement-board__announcement">
+                                <p class="announcement-board__text">
                                     Открыта регистрация на хакатон
                                 </p>
-                                <button class="bulletin-board__author">
+                                <button class="announcement-board__author">
                                     Даньшина М.В.
                                 </button>
                             </li>
-                            <li class="bulletin-board__announcement">
-                                <p class="bulletin-board__text">
+                            <li class="announcement-board__announcement">
+                                <p class="announcement-board__text">
                                     Открыта регистрация на хакатон
                                 </p>
-                                <button class="bulletin-board__author">
+                                <button class="announcement-board__author">
                                     Даньшина М.В.
                                 </button>
                             </li>
-                            <li class="bulletin-board__announcement">
-                                <p class="bulletin-board__text">
+                            <li class="announcement-board__announcement">
+                                <p class="announcement-board__text">
                                     Открыта регистрация на хакатон
                                 </p>
-                                <button class="bulletin-board__author">
+                                <button class="announcement-board__author">
                                     Даньшина М.В.
                                 </button>
                             </li>
                         </ul>
                         
-                        <div class="bulletin-board__button-wrapper">
-                            <button class="button bulletin-board__button" type="button" data-button-to-call-modal='modal-to-add-announcement'>
+                        <div class="announcement-board__button-wrapper">
+                            <button class="button announcement-board__button" type="button" data-button-to-call-modal='modal-to-add-announcement'>
                                 Добавить
                             </button>
                         </div>
