--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
                 </button>
             </div>
             <div class="header__logo-wrapper">
-                <img class="header__logo" src="img/logo-mospolytech.svg" alt="Московский политех" width="115" height="30" />
+                <a href="/">
+                    <img class="header__logo" src="img/logo-mospolytech.svg" alt="Московский политех" width="115" height="30" />
+                </a>
             </div>
             <button class="button header__button" type="button">
                 Войти
