fix foard form submit

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <form class="modal__form">
                     <input class="modal__input" type="text" placeholder="Заголовок объявления">
                     <textarea class="modal__textarea modal__textarea--mb40" placeholder="Текст объявления"></textarea>
-                    <input class="button modal__button" type="submit" data-button-to-close-modal>
+                    <input class="button modal__button" type="submit" value="Добавить" data-button-to-close-modal>
                     <!-- data-button-to-close-modal временно -->
                 </form>
             </div>
