--- a/index.html
+++ b/index.html
@@ -19,6 +19,42 @@
                 <button class="sitetoolbar__button" type="button">
                     <span class="sitetoolbar__button-line"></span>
                 </button>
+
+                <div class="sitetoolbar__circle-background"></div>
+
+                <div class="sitetoolbar__sections">
+                    <div class="sitetoolbar__close-button-wrapper">
+                        <button class="sitetoolbar__close-button" type="button">
+                            <img class="sitetoolbar__close-button-image" src="img/cross.svg" alt="Закрыть">
+                        </button>
+                    </div>
+                    <ul class="sitetoolbar__sections-list">
+                        <li class="sitetoolbar__section sitetoolbar__section--current">
+                            <button class="sitetoolbar__section-button" type="button">
+                                <div class="sitetoolbar__section-image-wrapper">
+                                    <img class="sitetoolbar__section-image" src="img/home.svg" alt="Главная">
+                                </div>
+                                <h3 class="sitetoolbar__section-title">Главная</h3>
+                            </button>
+                        </li>
+                        <li class="sitetoolbar__section">
+                            <button class="sitetoolbar__section-button" type="button">
+                                <div class="sitetoolbar__section-image-wrapper">
+                                    <img class="sitetoolbar__section-image" src="img/calendar.svg" alt="Мой проект">
+                                </div>
+                                <h3 class="sitetoolbar__section-title">Мой проект</h3>
+                            </button>
+                        </li>
+                        <li class="sitetoolbar__section">
+                            <button class="sitetoolbar__section-button" type="button">
+                                <div class="sitetoolbar__section-image-wrapper">
+                                    <img class="sitetoolbar__section-image" src="img/personal-account.svg" alt="Мой профиль">
+                                </div>
+                                <h3 class="sitetoolbar__section-title">Мой профиль</h3>
+                            </button>
+                        </li>
+                    </ul>
+                </div>
             </div>
             <div class="header__logo-wrapper">
                 <a href="/">
