added general styles

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,900i&display=swap" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="img/favicon.ico">
     <link rel="stylesheet" href="global-styles.css">
+    <link rel="stylesheet" href="general-styles.css">
     <link rel="stylesheet" href="style.css">
     <title>Главная</title>
 </head>
