--- a/add-project/index.html
+++ b/add-project/index.html
@@ -68,9 +68,9 @@
                 </div>
             </div>
             <div class="header__logo-wrapper">
-                <a href="/">
+                <button onclick="location.href='/'">
                     <img class="header__logo" src="../img/logo-mospolytech.svg" alt="Московский политех" width="115" height="30" />
-                </a>
+                </button>
             </div>
             <button class="button header__button" type="button">
                 Войти
