--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
                 </div>
             </div>
             <div class="header__logo-wrapper">
-                <a href="/">
+                <button onclick="location.href='/'">
                     <img class="header__logo" src="img/logo-mospolytech.svg" alt="Московский политех" width="115" height="30" />
-                </a>
+                </button>
             </div>
             <button class="button header__button" type="button">
                 Войти
@@ -100,7 +100,7 @@
                 </div>
 
                 <div class="menu main__menu">
-                    <button class="menu__section" type="button">
+                    <button class="menu__section" type="button" onclick="location.href='/projects-search/'">
                         <h3 class="menu__section-title">
                             Поиск проектов
                         </h3>
@@ -109,7 +109,7 @@
                         </div>
                     </button>
 
-                    <button class="menu__section" type="button">
+                    <button class="menu__section" type="button" onclick="location.href='/add-project/'">
                         <h3 class="menu__section-title">
                             Создать проект
                         </h3>
