--- a/projects-search/index.html
+++ b/projects-search/index.html
@@ -33,7 +33,7 @@
                     </div>
                     <ul class="sitetoolbar__sections-list">
                         <li class="sitetoolbar__section sitetoolbar__section--current" data-side-menu-element>
-                            <button class="sitetoolbar__section-button" type="button">
+                            <button class="sitetoolbar__section-button" type="button" onclick="location.href='/'">
                                 <div class="sitetoolbar__section-image-wrapper">
                                     <img class="sitetoolbar__section-image" src="../img/home.svg" alt="Главная">
                                 </div>
