added third step

--- a/add-project/index.html
+++ b/add-project/index.html
@@ -129,10 +129,14 @@
                         </h3>
 
                         <div class="add-project__project-description-form">
-                            <p class="add-project__project-description-paragraph">Укажите основную идею и направленность вашего проекта</p>
+                            <p class="add-project__project-description-paragraph">
+                                Укажите основную идею и направленность вашего проекта
+                            </p>
                             <textarea class="textarea add-project__project-description-textarea" placeholder="Описание"></textarea>
                             <label  class="add-project__clip-file-button-wrapper">
-                                <p class="add-project__clip-file-paragraph">Файл с подробным описанием</p>
+                                <p class="add-project__clip-file-paragraph">
+                                    Файл с подробным описанием
+                                </p>
                                 <div class="add-project__clip-file-image-wrapper">
                                     <img class="add-project__clip-file-image" src="../img/clip.svg" alt="Прикрепить">
                                 </div>
@@ -147,10 +151,32 @@
                             Вакансии
                         </h3>
 
-                        <div class="">Вакансии</div>
+                        <div class="add-project__vacancies-main-content">
+                            <ul class="add-project__vacancies-list">
+                                <li class="add-project__vacancy">
+                                    <button class="button button--pink add-project__vacancy-button" type="button">
+                                        <p class="add-project__vacancy-title">
+                                            Frontend-разработчик
+                                        </p>
+                                        <div class="add-project__vacancies-number-wrapper">
+                                            <div class="add-project__vacancies-number-image-wrapper">
+                                                <img class="add-project__vacancies-number-image" src="../img/human.svg" alt="Кол-во мест">
+                                            </div>
+                                            <span class="add-project__vacancies-number">
+                                                5
+                                            </span>
+                                        </div>
+                                        <div class="add-project__vacancy-actions-button">
+                                            <img class="add-project__vacancy-actions-button-image" src="../img/arrow-bottom.svg" alt="Действия">
+                                        </div>
+                                    </button>
+                                </li>
+                            </ul>
+
+                            <button class="button add-project__vacancies-button" type="button">Добавить</button>
+                        </div>
                     </div>
                 </div>
-
 
                 <div class="add-project__steps">
                     <button class="steps__switch-step-button-wrapper" type="button">
