prepared projects-search page

--- a/projects-search/index.html
+++ b/projects-search/index.html
@@ -78,6 +78,15 @@
         </div>
     </header>
 
+    <main role="main">
+        <div class="wrapper">
+            <h2 class="title">
+                Поиск проектов
+            </h2>
+
+
+        </div>
+    </main>
 
     <script src="../app.js"></script>
 
